fix: Dialog actions wrap

--- a/src/scss/components/Dialog.scss
+++ b/src/scss/components/Dialog.scss
@@ -103,6 +103,7 @@
 .dialog__actions {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-end;
   gap: 0.5rem;
   padding: 1.5rem;
